jdk25: sequenced collections, pattern matching, Map.class → TypeReference
Three mechanical modernizations across the backend now that we're on
JDK 25 + Spring Boot 4. None of these are bug fixes — the codebase
worked before — but each one drops a pre-Java-17 idiom for the modern
equivalent so the next audit cycle won't keep flagging them.

Sequenced-collection accessors (Java 21+):
 - list.get(0)                 → list.getFirst()  (≈49 sites)
 - list.get(list.size() - 1)   → list.getLast()   (≈19 sites)
 - list.remove(list.size() - 1)→ list.removeLast()  (3 sites)
The codemod was applied with a sed/Perl pair that only fires when the
receiver and size() target the same variable. False positives caught
at compile time: 4 JsonNode arrays (which use the same .get(int) syntax
but aren't SequencedCollections) and 1 Map<Integer, X> in a test — all
reverted with an inline comment explaining why.

Pattern matching for instanceof (Java 16+):
 - if (x instanceof Foo) { Foo f = (Foo) x; …f…} → if (x instanceof Foo f) {…}
 18 sites converted: TransactionSyncService, UserRepository,
 RetryHelper, AppConfigIntegration, RequestResponseLoggingFilter (×2),
 ExcelImportService, CacheMonitoringService (×2),
 MerchantCategoryRules (×2), PlaidTransactionSyncService (×3),
 PlaidDataExtractor, StripeService, TransactionController,
 EnhancedGlobalExceptionHandler.

Typed Jackson deserialisation:
 - mapper.readValue(json, Map.class) → mapper.readValue(json,
   new TypeReference<Map<String, Object>>() {})
 2 sites: PdfPatchProposer (Anthropic response parsing) and
 CSVImportService + MerchantCategoryRules (YAML rule loading).

Switch expressions where the cases are single-statement value-producers:
 - SubscriptionInsightsService — three Frequency switches
   (calculateExpectedNextPayment, unusedThresholdDays, getDaysForFrequency)
 - FileSecurityValidator — magic-bytes lookup at lines 414-425

Optional.isEmpty (Java 11+):
 - api/TransactionController.java:6889 — !opt.isPresent() → opt.isEmpty(